# soliris

./: CONTRIBUTING.md  Cargo.toml  README.md  Taskfile.yml
src/: cli.rs  main.rs
src/commands/: scan.rs
src/scan/: metadata.rs  mod.rs  scanner.rs
src/scanners/: memory.rs  mod.rs  result.rs
src/scanners/implementations/: missing_comments.rs  mod.rs  mutable_functions.rs  mutable_variables.rs  mutation_grapher.rs  struct_repacker.rs  unused_imports.rs
tests/contracts/: MutableContract.sol  SimpleContract.sol  StructsToRepack.sol
