[package]
name = "soliris"
version = "0.1.0"
authors = ["Luca Georges François <luca@quartz.technology>", "Tom Chauveau <tom@quartz.technology>"]
edition = "2021"
description = "Solidity code scanner and optimizer."
repository = "https://github.com/quartz-technology/soliris"
license = "MIT"
keywords = ["blockchain", "ethereum", "solidity", "ast", "optimisation"]
categories = ["command-line-utilities", "development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = { version = "4", features = ["derive"] }
syn-solidity = "0.3.0"
syn = { version = "2.0.26", features = ["full"] }
proc-macro2 = { version = "1.0.65", features = ["span-locations"]}
colored = "2.0.4"
